--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -3,27 +3,104 @@ body {
     background-color: orange ;
 }
 
-.gameContainer {
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+.playerHouses {
+    border: 5px solid gray;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.houseCount {
+    border: 4px solid blue;
+    border-radius: 5px;
+    min-height: 40px;
+}
+
+h1 {
+    text-align: center;
+}
+
+#gameContainer {
+    background-color: white;
     border: 10px grey solid;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.leftHouseLand {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 10px auto 10px;
+}
+
+
+.otherHouseLand {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto 10px;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: black;
+}
+
+.hWall {
+    width: 100%;
+    height: 10px;
+}
+
+.vWall {
+    width: 10px;
+    height: 100%;
+}
+
+.wall:hover {
+    background-color: darkgray;
+}
+
+.p1Wall {
+    background-color: teal;
+}
+
+.p2Wall {
+    background-color: brown;
 }
 
 .house {
-    position: relative;
-    overflow: hidden;
-    box-shadow: inset 0px 0px 0px 10px black;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    min-height: 100px;
 }
 
-.house:before {
+.p1House {
+    background-color: teal;
+}
+
+.p2House {
+    background-color: brown;
+}
+
+/* .house:before {
     display: block;
     position: absolute;
+    content:'';
     border-top:10px solid white;
     border-bottom:10px solid white;
-    height:calc(100% - 5px);
+    height:calc(100% - 20px);
     top:0;
-    width: calc(100% - 5px);
-    left:18px;
+    width: calc(100% - 20px);
+    left:10px;
  }
  .house:after {
     display: block;
@@ -31,11 +108,11 @@ body {
     content:'';
     border-right:10px solid white;
     border-left:10px solid white;
-    height:calc(100% - 5px);
-    width: calc(100% - 5px);
-    top:18px;
+    height:calc(100% - 20px);
+    width: calc(100% - 20px);
+    top:10px;
     left: 0;
- }
+ } */
 
 /*
 main {
