--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -1,6 +1,18 @@
 
 body {
-    background-color: orange ;
+    background-image: url("../imgs/2304.w061.n005.156B.p15.156.jpg") ;
+    background-size: cover;  
+    margin: 0;
+    padding: 0;
+}
+.sun {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    opacity: 0.1; 
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -14,6 +26,7 @@ header {
     border: 5px solid gray;
     border-radius: 5px;
     padding: 5px;
+    
 }
 
 .houseCount {
@@ -27,7 +40,9 @@ header {
 
 
 .p1 {
-    background-color: teal;
+    border:1px teal solid;
+    border-radius: 5px;
+    opacity: 0.9;
 }
 
 .ph1 {
@@ -39,7 +54,9 @@ header {
 }
 
 .p2 {
-    background-color: brown;
+    border:1px brown solid;
+    border-radius: 5px;
+    opacity: 0.9;
 }
 
 .ph2 {
@@ -56,7 +73,7 @@ header {
 }
 
 .built {
-    background-image: url("../imgs/roofbirdeye.png");
+    background-image: url("../imgs/16620.jpg");
     background-size: 100% 100%;
 }
 
@@ -81,6 +98,7 @@ h1 {
     padding: 10px;
     display: grid;
     grid-template-columns: repeat(var(--colNum), auto);
+    opacity: 0.9;
 }
 
 .leftHouseLand {
@@ -96,13 +114,16 @@ h1 {
     height: 100%;
     display: grid;
     grid-template-columns: auto 10px;
+    background-size: 100% 100%;
 }
 
 .dot {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: black;
+    /* background-color: black; */
+    background-image: url("../imgs/dot.png");
+
 }
 
 .hWall {
@@ -198,6 +219,9 @@ h1 {
 }
 
 @media (max-width: 800px) {
+    body {
+        background-size: 100% 100%;  
+    }
     header :nth-child(2) { 
         order: -1;
         flex: 100% 
