--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -8,6 +8,12 @@ body {
     overflow: hidden;
     }
 
+:root {
+    --colNum: 3;
+    --rowNum: 3;
+    --cloudTopStart: 0;
+}
+
 .sun {
     position: absolute;
     width: 100%;
@@ -16,7 +22,7 @@ body {
     opacity: 0.2; 
     margin: 0;
     padding: 0;
-    animation: sunColor 80s linear infinite;
+    animation: sunColor 60s linear infinite;
 }
 
 @keyframes sunColor{
@@ -35,7 +41,7 @@ body {
     background-size: 100%;
     background-repeat: no-repeat; 
     position: absolute;
-    top:  3%;
+    top:  var(--cloudTopStart);
     width: 30%;
     height: 30%;
     z-index: -1;
@@ -159,11 +165,6 @@ h1 {
     font-size: 30px;
     text-align: center;
     padding: 10px;
-}
-
-:root {
-    --colNum: 3;
-    --rowNum: 3;
 }
 
 #gameContainer {
