--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -5,7 +5,7 @@ body {
     background-repeat: no-repeat;  
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     }
 
 :root {
@@ -17,12 +17,13 @@ body {
 .sun {
     position: absolute;
     width: 100%;
-    height: 100%;
-    /* background-color: #000022; */
-    opacity: 0.2; 
+    /* height: 100%; */
+    min-height: 100vh;
+    background-color: #000022;
+    opacity: 0.9; 
     margin: 0;
     padding: 0;
-    animation: sunColor 60s linear infinite;
+    /* animation: sunColor 60s linear infinite; */
 }
 
 @keyframes sunColor{
