--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -18,12 +18,12 @@ body {
     position: absolute;
     width: 100%;
     /* height: 100%; */
-    min-height: 100vh;
-    background-color: #000022;
-    opacity: 0.9; 
+    min-height: 100%;
+    /* background-color: #000022; */
+    opacity: 0.2; 
     margin: 0;
     padding: 0;
-    /* animation: sunColor 60s linear infinite; */
+    animation: sunColor 60s linear infinite;
 }
 
 @keyframes sunColor{
