--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -241,6 +241,7 @@ h1 {
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+    position: relative;
 }
 
 .button p {
@@ -250,11 +251,18 @@ h1 {
 }
 
 .button:hover {
-    top: -1px;
-    right: -1px;
+    top: -2px;
+    left: -2px;
     background-color: gray;
+    border-color: darkgray;
     font-size: 25x;
+}
 
+.button:active {
+    top: 2px;
+    left: 2px;
+    background-color: rgb(67, 66, 66);
+    font-size: 30x;
 }
 
 #clearButton {
