--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -60,6 +60,15 @@ body {
     100% {left: 110%;}
 }
 
+.win {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(../imgs/YGg4.gif);
+    z-index: -1;
+}
+
 header {
     display: flex;
     flex-direction: row;
