--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    font-family:Snell Roundhand, cursive;
     }
 
 :root {
@@ -82,6 +83,16 @@ header {
     padding: 5px;
     opacity: 0.8;
     
+}
+
+.playerHouses>div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* flex-direction: row; */
+}
+
+h2 {
+    text-align: center;
 }
 
 .houseCount {
@@ -231,9 +242,14 @@ h1 {
 
 .buttons {
     display: flex;
+    /* grid-template-columns: 1fr 1fr; */
     align-items: center;
     justify-content: center;
     opacity: 0.9;
+}
+
+.clear {
+    display: flex;
 }
 
 .button {
@@ -313,124 +329,13 @@ h1 {
     header {
         flex-wrap: wrap;
     }
+    .playerHouses :nth-child(2){
+        order: +1;
+    }
     .genBordContainer {
         flex-direction: column;
     }
-}
-
-
-/* .p1House {
-    background-color: teal;
-}
-
-.p2House {
-    background-color: brown;
-} */
-
-/* .house:before {
-    display: block;
-    position: absolute;
-    content:'';
-    border-top:10px solid white;
-    border-bottom:10px solid white;
-    height:calc(100% - 20px);
-    top:0;
-    width: calc(100% - 20px);
-    left:10px;
- }
- .house:after {
-    display: block;
-    position: absolute;
-    content:'';
-    border-right:10px solid white;
-    border-left:10px solid white;
-    height:calc(100% - 20px);
-    width: calc(100% - 20px);
-    top:10px;
-    left: 0;
- } */
-
-/*
-main {
-    max-width: 70%;
-    text-align: center;
-    align-self: center;
-}
-
-.soundBoard {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    list-style: none;
-    padding: 0;
-}
-
-@media screen and (max-width: 600px) {
-    .soundBoard {
-        grid-template-columns: 1fr 1fr 1fr;
+    .clear {
+        flex-direction: column;
     }
 }
-
-.sbItem {
-    border: 2px solid grey;
-    min-width: 100px;
-    min-height: 100px;
-    
-}
-
-.sbItem a {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
-.sbItem a:hover {
-    color: orange;
-}
-
-.song {
-    text-decoration: none;
-    text-align: center;
-    line-height: 100px;
-}
-
-.dpHead {
-    background-image: url("../images/head.gif");
-    background-size: cover;
-    animation: shake 1s forwards infinite;
-
-}
-
-.dpHead a {
-    animation: blink 0.5s forwards infinite;
-}
-
-@keyframes blink {
-    0% {
-        color: blue;
-    }
-    33% {
-        color: purple;
-    }
-    66% {
-        color: goldenrod;
-    }
-    100% {
-        color: red;
-    }
-}
-
-@keyframes shake {
-    0% {
-        background-position: 50% 50%;
-    }
-    33% {
-        background-position: 50% 40%;
-    }
-    66% {
-        background-position: 40% 40%;
-    }
-    100% {
-        background-position: 50% 50%;
-    }
-} */
