--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -1,29 +1,40 @@
 
-body {
-    background-image: url("../imgs/2304.w061.n005.156B.p15.156.jpg") ;
-    background-size: 100% 105%;
-    background-repeat: no-repeat;  
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    font-family:Snell Roundhand, cursive;
-    }
-
 :root {
     --colNum: 3;
     --rowNum: 3;
     --cloudTopStart: 0;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+#gameScreen {
+    height: 100vh;
+    /* width: 100vw; */
+    background-image: url("../imgs/2304.w061.n005.156B.p15.156.jpg") ;
+    background-size: 100vw 100vh;
+    background-repeat: no-repeat;  
+    margin: 0;
+    padding: 0;
+    font-family: Comic Sans MS, Comic Sans, cursive;
+    display: flex;
+    flex-direction: column;
+    /* align-content: space-between;
+    justify-content: space-between; */
+}
+
 .sun {
     position: absolute;
-    width: 100%;
-    /* height: 100%; */
-    min-height: 100%;
+    width: 100vw;
+    height: 100vh;
     /* background-color: #000022; */
     opacity: 0.2; 
     margin: 0;
     padding: 0;
+    z-index: 1;
     animation: sunColor 60s linear infinite;
 }
 
@@ -48,7 +59,7 @@ body {
     top:  var(--cloudTopStart);
     width: 30%;
     height: 30%;
-    z-index: -1;
+    z-index: 0;
     animation: cloudMove 80s linear infinite;
 }
 
@@ -69,7 +80,7 @@ body {
     width: 100%;
     height: 100%;
     background-image: url(../imgs/YGg4.gif);
-    z-index: -1;
+    z-index: 0;
 }
 
 header {
@@ -77,6 +88,7 @@ header {
     flex-direction: row;
     justify-content: space-around;
     padding: 10px;
+    z-index: 2;
 }
 
 .playerHouses {
@@ -89,23 +101,35 @@ header {
 
 .playerHouses>div {
     display: grid;
-    grid-template-columns: 1fr 60px;
+    grid-template-columns: 1fr 70px;
     /* flex-direction: row; */
 }
 
 h2 {
     text-align: center;
+    margin: 5px 0px;
 }
 
 .houseCount {
-    border: 4px solid blue;
+    /* border: 4px solid blue; */
     border-radius: 5px;
-    min-height: 40px;
+    min-height: 20px;
     text-align: center;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: 30px;
+    align-items: center; */
+    font-size: 24px;
+    margin: 5px 0px;
+}
+
+main {
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 10px 0px;
+    /* align-content: space-between; */
 }
 
 .p1 {
@@ -201,6 +225,8 @@ h1 {
     opacity: 0.9;
     padding: 20px;
     border-radius: 5px;
+    /* margin: auto 5px; */
+    /* width:auto; */
 }
 
 .leftHouseLand {
@@ -324,13 +350,12 @@ h1 {
 }
 
 @media (max-width: 800px) {
-    body {
+    /* body {
         background-size: 100% 100%;
-        /* min-width: 540px;   */
-    }
+    } */
     header :nth-child(2) { 
         order: -1;
-        flex: 100% 
+        flex: 100%;
     }
     header {
         flex-wrap: wrap;
