--- a/Game/styles/main.css
+++ b/Game/styles/main.css
@@ -12,10 +12,12 @@ body {
 }
 
 #gameScreen {
-    height: 100vh;
+    /* height: 100vh; */
+    max-height: fit-content;
+    min-height: 100vh;
     /* width: 100vw; */
     background-image: url("../imgs/2304.w061.n005.156B.p15.156.jpg") ;
-    background-size: 100vw 100vh;
+    background-size: 100vw 100%;
     background-repeat: no-repeat;  
     margin: 0;
     padding: 0;
@@ -29,7 +31,9 @@ body {
 .sun {
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
+    min-height: 100vh;
+    max-height:inherit;
     /* background-color: #000022; */
     opacity: 0.2; 
     margin: 0;
@@ -79,7 +83,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url(../imgs/YGg4.gif);
+    background-image: url("../imgs/YGg4.gif");
     z-index: 0;
 }
 
@@ -225,7 +229,7 @@ h1 {
     opacity: 0.9;
     padding: 20px;
     border-radius: 5px;
-    /* margin: auto 5px; */
+    margin: auto 5px;
     /* width:auto; */
 }
 
@@ -368,5 +372,10 @@ h1 {
     }
     .clear {
         flex-direction: column;
+    }
+    #gameScreen {
+        background-size: 100vw 100%;
+        /* height: fit-content; */
+        /* background-repeat: repeat; */
     }
 }
