--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@
     --rowNum: 3;
     --cloudTopStart: 0;
     --houseMinHeight: 70px;
+    --gameAreaHeight: 210px;
 }
 
 body {
@@ -96,15 +97,29 @@ header {
     z-index: 2;
 }
 
+.scoreContainer {
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
 .playerHouses {
     border: 5px solid gray;
     border-radius: 5px;
     padding: 5px;
     opacity: 0.8;
-    
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    height: fit-content;
 }
 
 .playerHouses>div {
+    display: flex;
+}
+
+.playerHouses>div>div {
     display: grid;
     grid-template-columns: 1fr 70px;
     /* flex-direction: row; */
@@ -120,9 +135,9 @@ h2 {
     border-radius: 5px;
     min-height: 20px;
     text-align: center;
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     font-size: 24px;
     margin: 5px 0px;
 }
@@ -231,6 +246,8 @@ h1 {
     padding: 20px;
     border-radius: 5px;
     margin: auto 5px;
+    min-height: min-content;
+    height: var(--gameAreaHeight);
     /* width:auto; */
 }
 
@@ -354,6 +371,13 @@ h1 {
     align-items: center;
 }
 
+@media (max-width: 1100px) {
+
+    .playerHouses>div {
+        flex-direction: column;
+    }
+}
+
 @media (max-width: 800px) {
     /* body {
         background-size: 100% 100%;
@@ -367,7 +391,7 @@ h1 {
         padding: 4px;
     }
     .houseCount {
-        font-size: 10px;
+        font-size: 1.5em;
     }
     .button p {
         font-size: 15px;
@@ -386,6 +410,9 @@ h1 {
         flex-wrap: wrap;
     }
     .playerHouses :nth-child(2){
+        order: +1;
+    }
+    .playerHouses :nth-child(3){
         order: +1;
     }
     .genBordContainer {
