updated game area hight to hight instead of min hight

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ body {
 #gameScreen {
     /* height: 100vh; */
     max-height: fit-content;
-    min-height: 100vh;
+    height: 100vh;
     /* width: 100vw; */
     background-image: url("../imgs/2304.w061.n005.156B.p15.156.jpg") ;
     background-size: 100vw 100%;
